# shh

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: demo.tape
scripts/: release.sh
src/: app.rs  config.rs  main.rs  ssh.rs  theme.rs  ui.rs
